Thu Feb 20 01:03:35 2003  Alper Ersoy  <dirt@gtk.org>

	* bse/bseautodoc.c:
	* docs/teximacros.texi:
	* docs/generated/Makefile.am:
	* docs/generated/scandocs.pl: made function and struct names links to
	their descriptions where possible.

	* docs/generated/html.xsl:
	* docs/generated/man.xsl:
	* docs/generated/markup.xsl: added support for anchors in beast-man://
	urls.

	* docs/generated/man.xsl: fixed a few typos, improved layout in a few
	places, especially in tables.

	* docs/site-news.texi: fixed an overlooked macro name with a dash.

	* docs/generated/css/default.css: removed underlines in navigation
	link hovers in favor of colors. added colors for links.

Tue Feb 18 17:54:40 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* beast-gtk/bstgconfig.c beast-gtk/bstmenus.c beast-gtk/bstrackitem.c
	beast-gtk/bstsnetrouter.c beast-gtk/tsmview.c
	beast-gtk/gxk/gxkstock.c docs/utils/xmlantispace.c: fixes to build
	without warnings on gcc-3.2.

Tue Feb 18 01:11:12 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* configure.in: cleanups of the libcsl configure stuff.

Mon Feb 17 22:52:02 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* configure.in: libcsl support

Mon Feb 17 20:57:55 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* acbeast.m4: fixed wrong sed expression.

Mon Feb 17 19:33:19 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: make the first song page the default notebook
	page if the project cotains a song. otherwise, make the first snet
	page the default notebook page if the project contains one.

	* beast-gtk/gxk/gxkutils.[hc]:
	added gxk_notebook_set_current_page_widget().

Mon Feb 17 18:38:11 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnetshell.c (bst_snet_shell_rebuild): make the synth
	router the first notebook page.

	* test/simple-echo.bse: fix instrument "done" output.

	* test/*.bse: storage format fixups.

Sun Feb 16 09:01:28 2003  Tim Janik  <timj@gtk.org>
